[package]
name = "hello-rust-lambda"
version = "0.1.0"
authors = ["Satoshi Ogata <satosystems@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.2.1"
serde = { version = "1", features = ["derive"] }
