[package]
name = "hello-rust-lambda"
version = "0.2.0"
authors = ["Satoshi Ogata <satosystems@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.3.0"
serde = { version = "1.0.125", features = ["derive"] }
tokio = { version="1.5.0", features = ["full"] }
